<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/banner"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner_text"/>

    <TextView
        android:id="@+id/tv_height"
        android:text="@string/height_inches"
        style="@style/multi_text_view_style" />

    <EditText
        android:id="@+id/et_height"
        style="@style/main_edit_text_style"
        android:hint="@string/hint_height"/>

    <TextView
        android:id="@+id/tv_weight"
        android:text="@string/weight_inches"
        style="@style/multi_text_view_style"/>

    <EditText
        android:id="@+id/et_weight"
        style="@style/main_edit_text_style"
        android:hint="@string/hint_weight"/>
    
</LinearLayout>